z-index fix for overall loaders

--- a/trips-client/src/styles.less
+++ b/trips-client/src/styles.less
@@ -678,6 +678,7 @@ div.even-buttons-holder > button:first-child {
 
 div.fog {
     background-color:rgba(255, 255, 255, 0.5);
+    z-index:16; /* because interferes with Advanced Editor's panels (I don't understand why) */
 }
 
 div.modal-popup-background {
@@ -687,7 +688,7 @@ div.modal-popup-background {
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.25);
-    z-index: 10; /* because Advanced Editor owner's z-index interferes with popups (don't understand why) */
+    z-index: 20; /* because interferes with Advanced Editor's panels (I don't understand why) */
 }
 
 div.sub-entities-list {
@@ -707,10 +708,6 @@ div.editor-picture-panel {
 
 div.editor-picture-panel-narrow {
     margin-bottom:10px;
-}
-
-div.editor-main-panel {
-    z-index:1; /* for Advanced Editor popups */
 }
 
 button.button-pic-select {
